--- a/README.pod
+++ b/README.pod
@@ -1,12 +1,14 @@
-# NAME
+=pod
 
-List::Flatten::Recursive - [List::Flatten](http://search.cpan.org/perldoc?List::Flatten) with recursion
+=head1 NAME
 
-# VERSION
+List::Flatten::Recursive - L<List::Flatten> with recursion
 
-version 0.103420
+=head1 VERSION
 
-# SYNOPSIS
+version 0.103440
+
+=head1 SYNOPSIS
 
     use List::Flatten::Recursive qw( flat );
     sub printlist { print '(' . join(', ', @_) . ")\n" }
@@ -23,14 +25,14 @@ version 0.103420
     @flattened = flat(@$crazy_listref); # Will not yield the same as above.
     printlist(@flattened);
 
-# DESCRIPTION
+=head1 DESCRIPTION
 
 If you think of nested lists as a tree structure (an in Lisp, for
-example), then `flat` basically returns all the leaf nodes from an
+example), then C<flat> basically returns all the leaf nodes from an
 inorder tree traversal, and leaves out the internal nodes (i.e.
 listrefs). If the nested list is a DAG instead of just a tree, it
 should still flatten correctly (based on my own definition of
-correctness, of course; see also `t/flatten-dag.t`).
+correctness, of course; see also F<t/flatten-dag.t>).
 
 If the nested list is self-referential, then any cycles will be broken
 by replacing ancestor references with empty lists. However, the only
@@ -39,36 +41,36 @@ structure is that infinite recursion should not occur, and each
 non-list element in the data structure should appear at least once in
 the output.
 
-# METHODS
+=head1 METHODS
 
-## flat
+=head2 flat
 
 This method flattens a list (or listref) recursively. It takes a list
 that may contain other sublists, and replaces those sublists with
 their contents, recursively, until the list no longer contains any
 sublists.
 
-`flat` makes a best effort to break circular references (that is,
+C<flat> makes a best effort to break circular references (that is,
 lists that contain references to themselves), so it should not enter
 infinite recursion. If you find a case that causes it to recurse
 infinitely, please inform me.
 
 This method is exported by default.
 
-## flatten_to_listref
+=head2 flatten_to_listref
 
-Same as `flat`, but returns a single reference to the resulting list.
+Same as C<flat>, but returns a single reference to the resulting list.
 
 This method is exported only by request. To use this method, put the following at the top of your program:
 
     use List::Flatten::Recursive qw( flatten_to_listref );
 
-# BUGS AND LIMITATIONS
+=head1 BUGS AND LIMITATIONS
 
-## Self-referential lists should be flattened by reference
+=head2 Self-referential lists should be flattened by reference
 
 If you are going to flatten a list which might contain references to
-itself, you should pass a reference to that list to `flat`, or else
+itself, you should pass a reference to that list to C<flat>, or else
 things will not work the way you expect. You will end up with an extra
 instance of each item in the outermost list. However, this will not
 result in infinite recursion.
@@ -76,30 +78,32 @@ result in infinite recursion.
 This module should never cause infinite recursion. If it does, please
 submit a bug report.
 
-## `flat` always returns a list
+=head2 C<flat> always returns a list
 
-Even if you call `flat` on a single scalar, it will still return a
+Even if you call C<flat> on a single scalar, it will still return a
 list with one element in it. If called in scalar context, it will
-return the length of that list. `flatten_to_listref` would return a
+return the length of that list. C<flatten_to_listref> would return a
 reference to a list with one element. There is no case where the
 original scalar would be returned directly. This is by design. If you
 think this is wrong, email me and tell me why.
 
 Please report any bugs or feature requests to
-`rct+perlbug@thompsonclan.org`. If you find a case where this module
+C<rct+perlbug@thompsonclan.org>. If you find a case where this module
 returns what you feel is a wrong result, please send an example that
 will cause it to do so, along with the actual and expected results.
 
-# SEE ALSO
+=head1 SEE ALSO
+
+=over 4
 
 
 
+=back
 
-
-* [List::Flatten](http://search.cpan.org/perldoc?List::Flatten)
+* L<List::Flatten>
   The non-recursive insipiration for this module.
 
-# DISCLAIMER OF WARRANTY
+=head1 DISCLAIMER OF WARRANTY
 
 BECAUSE THIS SOFTWARE IS LICENSED FREE OF CHARGE, THERE IS NO WARRANTY
 FOR THE SOFTWARE, TO THE EXTENT PERMITTED BY APPLICABLE LAW. EXCEPT WHEN
@@ -122,13 +126,14 @@ FAILURE OF THE SOFTWARE TO OPERATE WITH ANY OTHER SOFTWARE), EVEN IF
 SUCH HOLDER OR OTHER PARTY HAS BEEN ADVISED OF THE POSSIBILITY OF
 SUCH DAMAGES.
 
-# AUTHOR
+=head1 AUTHOR
 
 Ryan C. Thompson <rct@thompsonclan.org>
 
-# COPYRIGHT AND LICENSE
+=head1 COPYRIGHT AND LICENSE
 
 This software is copyright (c) 2010 by Ryan C. Thompson.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
+
