--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension {{$dist->name}}
 
 {{$NEXT}}
+    - Removed unnecessary dependency on Perl v5.10
 
 0.103420  2010-12-07 19:40:06 PST8PDT
     - First release on CPAN
